Fixed some queries for spacing/positioning in projects section

--- a/css/queries.css
+++ b/css/queries.css
@@ -5,7 +5,80 @@
   }
 
 } */
-
+@media (min-width: 2000px) {
+  .project {
+    justify-content: space-evenly;
+  }
+  .project .text {
+    flex: 0.5;
+  }
+}
+@media screen and (max-width: 1023px) {
+  #projects {
+    margin-bottom: 25%;
+  }
+}
+@media screen and (max-width: 1001px) {
+  .projectBox {
+    padding: 0;
+  }
+  .project {
+    margin: 15px 0;
+    padding-bottom: 15px;
+    flex-direction: column;
+  }
+  .project:nth-of-type(even) {
+    flex-direction: column;
+  }
+  .project .img {
+    height: 275px;
+    width: 100%;
+    margin-bottom: 11%;
+  }
+  .project .img img {
+    max-width: 100%;
+  }
+  .project .text {
+    width: 100%;
+    padding: 2em;
+  }
+}
+@media screen and (max-width: 1200px) {
+  #contact {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .content {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .content p {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+  .contactBox {
+    width: 100%;
+    margin-top: 30px;
+  }
+  .opt {
+    padding-left: 2%;
+    padding-right: 4%;
+  }
+}
+@media screen and (min-width: 1919px) {
+  .project .img {
+    max-height: 650px;
+    flex: 1.5;
+  }
+  .project .text {
+    flex: 1;
+  }
+}
+@media screen and (max-width: 1150px) {
+  .project .text {
+    padding: 0 3em;
+  }
+}
 @media screen and (max-width: 900px) {
   #home header h1 {
     letter-spacing: 3px;
@@ -30,6 +103,9 @@
   .navList li:nth-of-type(4) a {
     width: 100%;
     padding-left: 25px;
+  }
+  .project .img {
+    margin-bottom: 40px;
   }
 }
 @media screen and (max-width: 700px) {
@@ -82,58 +158,7 @@
     grid-template-rows: 1fr 1fr 1fr 1fr;
   }
 }
-@media screen and (max-width: 1023px) {
-  #projects {
-    margin-bottom: 25%;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .projectBox {
-    padding: 0;
-  }
-  .project {
-    padding-top: 20px;
-    margin: 15px 0;
-    flex-direction: column;
-  }
-  .project .img {
-    margin-bottom: 20px;
-    width: 100%;
-  }
-  .project .img img {
-    max-width: 100%;
-    max-height: 600px;
-  }
-  .project .text {
-    padding: 0 3em;
-  }
-  .project .text p {
-    padding: 0;
-  }
-  .project:nth-of-type(even) {
-    flex-direction: column;
-  }
-  #contact {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .content {
-    flex-direction: column;
-    justify-content: center;
-  }
-  .content p {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .contactBox {
-    width: 100%;
-    margin-top: 30px;
-  }
-  .opt {
-    padding-left: 2%;
-    padding-right: 4%;
-  }
-}
+
 @media only screen and (max-width: 426px) {
   nav {
     position: absolute;
@@ -186,14 +211,5 @@
   }
   .fed {
     font-size: 1.25em;
-  }
-}
-
-@media (min-width: 2000px) {
-  .project {
-    justify-content: space-evenly;
-  }
-  .project .text {
-    flex: 0.5;
   }
 }
